--- a/primid/src/main/webapp/resources/css/style.css
+++ b/primid/src/main/webapp/resources/css/style.css
@@ -5,19 +5,19 @@ Website: http://themegret.com
 
 ============================== */
 
-/* ==================== CSS Structure ==================== 
+/* ==================== CSS Structure ====================
 1. COMMON STYLES
 	- Reset Styles
 	- Common Classes
 	- Pre Loader Styles
-	
+
 2. HTML ELEMENTS STYLE
 	- Button Styles
 
 3. HEADER SECTION
 	- Main Navigation Styles
 	- Home section
-	
+
 4. FEATURE SECTION
 5. SERVICE SECTION
 6. STEP SECTION
@@ -178,7 +178,7 @@ font-weight: 700;
 	display: inline-block;
 	margin-top: 0;
 	padding: 8px 0;
-	
+
 }
 
 .section-overlay {
@@ -186,6 +186,9 @@ font-weight: 700;
 	z-index: 5;
 }
 
+.section-overlay2 {
+	background: rgba(0, 0, 0, .7);
+}
 
 
 /* --------------- Pre Loader Styles --------------- */
